# dicom-index

./: .gitignore  AGENTS.md  docker-compose.yml  pyproject.toml
src/fastwado/: api.py  cli.py  config.py  db.py  dicom_reader.py  fix_encoding.py  intensity_handler.py  metadata_reader.py  relay.py  reporter.py  scanner.py  wado_handler.py
tests/: conftest.py  test_db.py  test_dicom_reader.py  test_relay.py
tests/fixtures/: create_test_dicom.py
