[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-index"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "psycopg2-binary>=2.9",
    "python-gdcm>=2.8",
]

[project.scripts]
dicom-index = "fastwado.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
api = [
    "aiohttp>=3.9",
    "fastapi>=0.100",
    "numpy>=1.20",
    "pillow>=10",
    "uvicorn>=0.30",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
